# hyper_gb

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE
cmake/: CompilerWarnings.cmake  Doxygen.cmake  PreventInSourceBuilds.cmake  StandardProjectSettings.cmake
core/: CMakeLists.txt
core/include/: cartridge.h  cpu.h  cpu_instructions.h  gameboy.h  gb.h  mmu.h  ppu.h  prerequisites.h  timer.h  types.h
core/include/gb/: cartridge.h  cpu.h  cpu_instructions.h  definitions.h  gameboy.h  gb.h  logger.h  mmu.h  ppu.h  prerequisites.h  timer.h
core/include/gb/utils/: bits.h  log.h  logger.h
core/src/: cartridge.c  cpu.c  cpu_instructions.c  gameboy.c  logger.c  mmu.c  ppu.c  timer.c
core/src/gb/: cartridge.c  cpu.c  cpu_instructions.c  gameboy.c  gb.c  logger.c  mmu.c  ppu.c  timer.c
core/src/gb/utils/: log.c  logger.c
include/: cartridge.h  cpu.h  cpu_instructions.h  emulator.h  gameboy.h  mmu.h  prerequisites.h  types.h
roms/: imgui.ini
src/: cartridge.c  cpu.c  cpu_instructions.c  emulator.c  gameboy.c  main.c  mmu.c
tests/: CMakeLists.txt
tests/src/: instruction_tests.cpp
